Overflow fix

--- a/css/hues-res.css
+++ b/css/hues-res.css
@@ -2,7 +2,7 @@
     position: relative;
     margin: 5px;
     height: 385px;
-    font-size: 15px;
+    font-size: 14px;
 }
 
 .res-packscontainer, .res-packcontainer {
